Added a comments button to each row in the textView for each link. Need to now eventually have it display the actual comments from reddit.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cpre388.gifsound" >
+    package="cpre388.gifsound">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,10 +8,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".LandingPage"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,11 +21,14 @@
         <activity
             android:name=".GifSoundView"
             android:label="@string/title_activity_gif_sound_view"
-            android:parentActivityName=".LandingPage" >
+            android:parentActivityName=".LandingPage">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cpre388.gifsound.LandingPage" />
         </activity>
+        <activity
+            android:name=".RedditComments"
+            android:label="@string/title_activity_reddit_comments"></activity>
     </application>
 
 </manifest>
