--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
                 android:value="cpre388.gifsound.LandingPage" />
         </activity>
         <activity
+            android:name=".GifSoundViewActivity"
+            android:label="@string/title_activity_gif_sound_view_activity"
+            android:parentActivityName=".GifSoundView">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cpre388.gifsound.GifSoundView" />
+        </activity>
+        <activity
             android:name=".RedditComments"
             android:label="@string/title_activity_reddit_comments"></activity>
     </application>
