Removed GifSoundView reference in Landing page. Parses url for gif id

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
         <activity
             android:name=".GifSoundViewActivity"
             android:label="@string/title_activity_gif_sound_view_activity"
-            android:parentActivityName=".GifSoundView">
+            android:parentActivityName=".LandingPage">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cpre388.gifsound.GifSoundView" />
+                android:value="cpre388.gifsound.LandingPage" />
         </activity>
         <activity
             android:name=".RedditComments"
